--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -78,11 +78,14 @@
                               <i class="fa fa-eye"></i> Show
                           <%- end %>
                         </li>
-                        <li>
-                          <%= link_to edit_customer_product_path(product) do %>
-                              <i class="fa fa-edit"></i> Edit
-                          <%- end %>
-                        </li>
+                        <% unless product.is_enquired %>
+                            <li>
+                              <%= link_to edit_customer_product_path(product) do %>
+                                  <i class="fa fa-edit"></i> Edit
+                              <%- end %>
+                            </li>
+                        <%end%>
+
                         <li class="no_border">
                           <%= link_to customer_product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
                               <i class="fa fa-trash fa-3"></i> Delete
