--- a/app/views/customer_mailer/service_un_verified.html.erb
+++ b/app/views/customer_mailer/service_un_verified.html.erb
@@ -1,7 +1,7 @@
 Hi <%= @user.name %>,
 <br>
 <br>
-This message refers to the ad: “<%= @service.name %>” of <%= "Service#{@service.name}"%>.
+This message refers to the ad: <%= @service.service_description %> of <%= "Service#{@service.name}"%>.
 <br>
 <br>
 <strong>Your ad contains prohibited a prohibited item or content</strong>
