--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -27,16 +27,6 @@
         <div class="col-md-12">
           <div class="contact-main-form">
             <%= simple_form_for [:customer, @product] do |f| %>
-
-                <% unless params[:action] == 'edit' %>
-                <div id="nested-product-images">
-                  <%= f.fields_for :product_images do |builder| %>
-                      <%= render partial: 'application/product_image_fields', locals: { f: builder } %>
-                  <%- end %>
-                  <p id="nested-click"><%= link_to_add_fields "Add Product Image", f, :product_images %></p>
-                </div>
-                    <%end%>
-
                 <div class="col-xs-12">
                   <div class="field-con">
                     <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category', label: 'Product Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
@@ -153,6 +143,19 @@
                 <div class="col-xs-12">
                   <div class="field-con">
                     <%= f.input :other, label: 'Other' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <% unless params[:action] == 'edit' %>
+                        <div id="nested-product-images" class="nested_images">
+                          <%= f.fields_for :product_images do |builder| %>
+                              <%= render partial: 'application/product_image_fields', locals: { f: builder } %>
+                          <%- end %>
+                          <%= link_to_add_fields "+", f, :product_images %>
+                          <p id="nested-click"></p>
+                        </div>
+                    <%end%>
                   </div>
                 </div>
                 <div class="clearfix"></div>
