chnages as per vassu

--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -11,7 +11,7 @@
     <div class="col-xs-12">
       <h1 class="page-title">
         Advertisements
-        <%= link_to 'Post an Add', new_customer_advertisement_path, class: 'btn btn-primary add-btn pull-right'  %>
+        <%= link_to 'Post an Ad', new_customer_advertisement_path, class: 'btn btn-primary add-btn pull-right'  %>
       </h1>
       <div class="clearfix"></div>
     </div>
