--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -3,6 +3,14 @@
       <div class="col-sm-6">
         <%= f.error_notification %>
         <%= f.input :name %>
+        <% if @category.icon_image.present? %>
+            <%= image_tag @category.icon_image.url(:original) %>
+        <%- end %>
+        <%= f.input :icon_image %>
+        <% if @category.detail_image.present? %>
+            <%= image_tag @category.detail_image.url(:original) %>
+        <%- end %>
+        <%= f.input :detail_image %>
         <%= f.submit 'Save', class: 'btn btn-primary ' %>
       </div>
       <div class="col-sm-6"></div>
