--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -13,6 +13,8 @@
       <thead>
       <tr class="info">
         <th>Name</th>
+        <th>Icon image</th>
+        <th>Detail image</th>
         <th>Action</th>
       </tr>
       </thead>
@@ -20,6 +22,8 @@
       <% @categories.each do |category| %>
           <tr>
             <td><%= category.name %></td>
+            <td><%= image_tag category.icon_image.url(:original), style: 'height:25px; width:25px;' if category.icon_image.present? %></td>
+            <td><%= image_tag category.detail_image.url(:original), style: 'height:25px; width:25px;' if category.detail_image.present? %></td>
             <td>
               <%= link_to edit_admin_category_path(category) do %>
                   <i class="fa fa-edit"></i>
