--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -173,7 +173,14 @@
             <li class="dropdown"><a href="javascript:void(0)"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
               <ul class="dropdown-menu dropdown-menu-category">
                 <% @categories.each do |category| %>
-                    <li><a href="<%= category_path(category)%>"><i class="fa fa-home dropdown-menu-category-icon"></i> <%= category.name %></a>
+                    <li><a href="<%= category_path(category)%>">
+                      <%  if category.icon_image.present? %>
+                          <%= image_tag category.icon_image.url(:original), style: 'height:25px; width:25px;' %>
+                      <% else %>
+                          <i class="fa fa-home dropdown-menu-category-icon"></i>
+                      <%end%>
+
+                      <%= category.name %></a>
                       <div class="dropdown-menu-category-section">
                         <div class="dropdown-menu-category-section-inner">
                           <div class="dropdown-menu-category-section-content">
@@ -202,7 +209,11 @@
                             </div>
                           </div>
                         </div>
-                        <%= image_tag "theme_img/test_cat/6-i.png", class: 'img-responsive dropdown-menu-category-section-theme-img' %>
+                        <% if category.detail_image.present? %>
+                            <%= image_tag category.detail_image.url(:original), class: 'img-responsive dropdown-menu-category-section-theme-img' %>
+                        <% else %>
+                            <%= image_tag "theme_img/test_cat/6-i.png", class: 'img-responsive dropdown-menu-category-section-theme-img' %>
+                        <% end %>
                       </div>
                     </li>
                 <% end %>
