--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -398,6 +398,20 @@
                $('.rgr-frm-mumber').val(this.value.substr(0, 10));
            }
         });
+
+        $('#forgot-password').keyup(function(){
+            var number = this.value;
+            if(number.length > 10){
+                $('#forgot-password').val(this.value.substr(0, 10));
+            }
+        });
+        $('#register-mobile').keyup(function(){
+            var number = this.value;
+            if(number.length > 10){
+                $('#register-mobile').val(this.value.substr(0, 10));
+            }
+        });
+
     });
 
 
