--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -29,16 +29,16 @@
             eventLimit: true, // allow "more" link when too many events
 //            eventColor: 'red',
             events: [
-                <% @advertisements.each do |advertisement| %>
-                {
-                    title: "<%= advertisement.title %>",
-                    start: "<%= advertisement.start_at %>",
-                    end: "<%= advertisement.end_at %>",
-                    description: "<%= advertisement.description %>",
-                    color: "red",
-                    url: "<%= customer_advertisement_path(advertisement) %>"
-                },
-                <% end %>
+                <%# @advertisements.each do |advertisement| %>
+//                {
+//                    title: "<%#= advertisement.title %>",
+//                    start: "<%#= advertisement.start_at %>",
+//                    end: "<%#= advertisement.end_at %>",
+//                    description: "<%#= advertisement.description %>",
+//                    color: "red",
+//                    url: "<%#= customer_advertisement_path(advertisement) %>"
+//                },
+                <%# end %>
                 <% @products.each do |product| %>
                 {
                     title: "<%= product.name %>",
