--- a/app/views/customer_mailer/service_enquiry.html.erb
+++ b/app/views/customer_mailer/service_enquiry.html.erb
@@ -1,7 +1,7 @@
 Hi <%= @user.name %>,
 <br>
 <br>
-You have received one enquiry from <%= @enquiry.user.name %> on your service having Ad Enquiry#<%= @enquiry.id %> and <%= @enquiry.description %>. Enquiry details are as:
+You have received one enquiry from <%= @enquiry.user.name %> on your service having Ad Service#<%= @service.id %> and <%= @enquiry.description %>. Enquiry details are as:
 <br><br>
 Ad ID: Enquiry#<%= @enquiry.id %>
 <br>
