--- a/app/views/customer_mailer/product_deal_cancelled.html.erb
+++ b/app/views/customer_mailer/product_deal_cancelled.html.erb
@@ -2,7 +2,7 @@ Hi <%= @product.user.name %>,
 
 <br>
 <br>
-We regret to inform you that your final offer made on your product with Ad Product#<%=@product.id%> & <%= @product.name %>  & <%= @product.description %> dated: <%= @cancelled_enquiry.start_at.strftime(time_format)%> to <%= @cancelled_enquiry.end_at.strftime(time_format)%>.has been declined by the Renter.
+We regret to inform you that your final offer made on your product with Ad Product#<%=@product.id%> & <%= @product.name %> dated: <%= @cancelled_enquiry.start_at.strftime(time_format)%> to <%= @cancelled_enquiry.end_at.strftime(time_format)%>.has been declined by the Renter.
 <br>
 <br>
 Renter has provided the following remarks:
