--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -16,7 +16,7 @@
         <tbody>
         <% @services.each do |service| %>
             <tr class="data">
-              <td><%= service.id %></td>
+              <td>Service#<%= service.id %></td>
               <td><%= service.service_description %></td>
               <td><%= service.subcategory.category.name %></td>
               <td><%= service.subcategory.name %></td>
