--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -66,23 +66,27 @@
           </style>
         </div>
         <script type='text/javascript'>
-            function init_map(){
-                var myOptions = {
-                    zoom:10,center:new google.maps.LatLng(28.4138045,77.32239149999998),mapTypeId: google.maps.MapTypeId.ROADMAP
-                };
-                map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
-                marker = new google.maps.Marker({
-                    map: map,position: new google.maps.LatLng(28.4138045,77.32239149999998)
-                });
-                infowindow = new google.maps.InfoWindow({
-                    content:'<strong>ByeBuying</strong><br>Sec 16, Faridabad<br>'
-                });
-                google.maps.event.addListener(marker, 'click', function(){
+            $( document ).ready(function() {
+                function init_map(){
+                    var myOptions = {
+                        zoom:10,center:new google.maps.LatLng(28.4138045,77.32239149999998),mapTypeId: google.maps.MapTypeId.ROADMAP
+                    };
+                    map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
+                    marker = new google.maps.Marker({
+                        map: map,position: new google.maps.LatLng(28.4138045,77.32239149999998)
+                    });
+                    infowindow = new google.maps.InfoWindow({
+                        content:'<strong>ByeBuying</strong><br>Sec 16, Faridabad<br>'
+                    });
+                    google.maps.event.addListener(marker, 'click', function(){
+                        infowindow.open(map,marker);
+                    });
                     infowindow.open(map,marker);
-                });
-                infowindow.open(map,marker);
-            }
-            google.maps.event.addDomListener(window, 'load', init_map);
+                }
+                google.maps.event.addDomListener(window, 'load', init_map);
+            });
+
+
         </script>
       </div>
     </div>
