--- a/app/views/users/all.html.erb
+++ b/app/views/users/all.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="gap"></div>
-  <h1 class="page-title"><%= current_user.name %></h1>
+  <h1 class="page-title"><%= @user.name %></h1>
   <div class="tabbable product-tabs">
     <ul class="nav nav-tabs" id="myTab">
       <li class="active"><a href="#tab-1" data-toggle="tab">Products</a>
