profile default image

--- a/app/views/customer/welcome/profile.html.erb
+++ b/app/views/customer/welcome/profile.html.erb
@@ -6,12 +6,10 @@
             <%= image_tag @customer.image(:size_250x250), class: 'img-responsive' %>
             <%#= link_to 'Remove', 'profile_image', method: :delete, data: {confirm: "Are you sure?"}  %>
         <% else %>
-            <a href="../../../assets/theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
-              <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
-            </a>
+            <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
         <% end %>
         <%= form_tag customer_update_profile_image_path, class: 'upload-form', method: :put, multipart: true do %>
-            <%= file_field_tag :image, class: 'upload-img' %>
+            <%= file_field_tag :image, accept:'image/*', class: 'upload-img' %>
             <%= submit_tag("upload", class: "upload-btn") %>
         <% end %>
       </div>
