profile default image

--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -137,6 +137,13 @@
           </div>
           <div class="gap"></div>
       <% end %>
+
+      <% if @products.count == 0 and @services.count == 0 %>
+
+          <h2 class="text-center">No Item Found</h2>
+
+      <% end %>
+
     </div>
   </div>
 </div>
