profile default image

--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -187,7 +187,7 @@
 //        }
     });
 
-    $("#nested-product-images :input").click(function(){
-        debugger
-    });
+//    $("#nested-product-images :input").click(function(){
+//        debugger
+//    });
 </script>
