--- a/app/views/layouts/customer.html.erb
+++ b/app/views/layouts/customer.html.erb
@@ -48,5 +48,17 @@
 <%= javascript_include_tag 'vendors/theme/owl-carousel' %>
 <%= javascript_include_tag 'vendors/theme/magnific' %>
 <%= javascript_include_tag 'vendors/theme/custom' %>
+
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function(){
+        setTimeout(function(){
+            if($('img').css('display') == "none") {
+//                HERE YOU CREATE CUSTOM LOGIC
+                alert('Please disable Ads Blocker.');
+            }
+        }, 500);
+    });
+</script>
+
 </body>
 </html>
