--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,5 +27,17 @@
       <%= yield %>
   <%- end %>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function(){
+        setTimeout(function(){
+            if($('img').css('display') == "none") {
+//                HERE YOU CREATE CUSTOM LOGIC
+                alert('Please disable Ads Blocker.');
+            }
+        }, 500);
+    });
+</script>
+
 </body>
 </html>
