--- a/app/views/customer_mailer/registration.html.erb
+++ b/app/views/customer_mailer/registration.html.erb
@@ -1,30 +1,36 @@
-Hi <%= @user.name %>,
-<br>
-<br>
-Thanks for registering on ByeBuying.com. You have successfully created a new account and your credentials are as under:
-<br>
-<br>
-Mobile no.	:	<%= @user.contact %>
-<br>
-Password	:	<%= @password %>
-<br>
-<br>
-As a registered user, you can now browse wide range of products  & services and start renting on www.ByeBuying.com
-<br><br>
-In case of any queries, do reach out to us at info@byebuying.com.
-<br><br>
-Important Security Tips:
-<br><br>
-1.	Always keep your account details safe.
-<br>
-2.	Never disclose your login details to anyone.
-<br>
-3.	Change your password regularly.
-<br>
-4.	Should you suspect someone of using your account illegally, please notify us immediately.
-<br>
-<br>
-Regards,
-<br>
-ByeBuyingTeam
-<br><br>
+<table class="outer" align="center">
+  <tr>
+    <td class="one-column">
+      <table width="100%">
+        <tr>
+          <td class="inner contents">
+            <p class="h1">Hi <%= @user.name %>,</p>
+            <br>
+            <p>
+              Thanks for registering on ByeBuying.com. You have successfully created a new account and your credentials are as under:
+            </p>
+            <p>
+              Mobile no.	:	<%= @user.contact %>
+            </p>
+            <p>
+              Password	:	<%= @password %>
+            </p>
+            <p>As a registered user, you can now browse wide range of products  & services and start renting on www.ByeBuying.com</p>
+            <p>In case of any queries, do reach out to us at info@byebuying.com.</p>
+            <p>Important Security Tips:</p>
+            <ul>
+              <li>Always keep your account details safe.</li>
+              <li>Never disclose your login details to anyone.</li>
+              <li>Change your password regularly.</li>
+              <li>Should you suspect someone of using your account illegally, please notify us immediately.</li>
+            </ul>
+            <p>
+              Regards,<br>
+              ByeBuyingTeam
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
