--- a/app/views/customer_mailer/product_enquiry.html.erb
+++ b/app/views/customer_mailer/product_enquiry.html.erb
@@ -1,35 +1,107 @@
-Hi <%= @user.name %>,
-<br>
-<br>
-You have received one enquiry from <%= @enquiry.user.name %> on your product having Ad Enquiry#<%= @product.id %>  <%= "and #{@product.description}" if @product.description.present? %>. Enquiry details are as:
-<br><br>
-Ad ID: Product#<%=@product.id %>
-<br>
-Ad Description: <%= @product.description %>
-<br>
-Enquired by: <%= @enquiry.user.name %>
-<br>
-Enquired on: <%= @enquiry.created_at.strftime(time_format)%>
-<br>
-Product required for duration: <%= @enquiry.start_at.strftime(time_format)%> to <%= @enquiry.end_at.strftime(time_format)%>
-<br>
-Price requested per hour: <%= @enquiry.expected_per_hour_price %>
-<br>
-Price requested per day : <%= @enquiry.expected_per_day_price %>
-<br>
-Price requested per week : <%= @enquiry.expected_per_week_price %>
-<br>
-Price requested per month : <%= @enquiry.expected_per_month_price %>
-<br>
+<table class="outer" align="center">
+  <tr>
+    <td class="one-column">
+      <table width="100%">
+        <tr>
+          <td class="inner contents">
+            <p class="h1" style="">Hi <%= @user.name %>,</p>
+            <br>
+            <p>
+              You have received one enquiry from <%= @enquiry.user.name %> on your product having Ad Enquiry#<%= @product.id %>  <%= "and #{@product.description}" if @product.description.present? %>. Enquiry details are as:
+            </p>
+            <br>
+            <p>
+              Ad ID: Product#<%=@product.id %>
+            </p>
+            <p>
+              Ad Description: <%= @product.description %>
+            </p>
+            <p>
+              Enquired by: <%= @enquiry.user.name %>
+            </p>
+            <p>
+              Enquired on: <%= @enquiry.created_at.strftime(time_format)%>
+            </p>
+            <p>
+              Product required for duration: <%= @enquiry.start_at.strftime(time_format)%> to <%= @enquiry.end_at.strftime(time_format)%>
+            </p>
+            <p>
+              <%= "Price requested per hour: #{@enquiry.expected_per_hour_price}" if @enquiry.expected_per_hour_price > 0%>
+            </p>
+            <p>
+              <%= "Price requested per day: #{@enquiry.expected_per_day_price}" if @enquiry.expected_per_day_price > 0%>
+            </p>
+            <p>
+              <%= "Price requested per week: #{@enquiry.expected_per_week_price}" if @enquiry.expected_per_week_price > 0%>
+            </p>
+            <p>
+              <%= "Price requested per month: #{@enquiry.expected_per_month_price}" if @enquiry.expected_per_month_price > 0%>
+            </p>
+            <br>
+            <p>
+              <%= "Other details: #{@product.technical_specification}"  if @product.technical_specification.present?%>
+            </p>
+            <br>
+            <p>
+              Please login into your account on <a href="http://byebuying.com">www.ByeBuying.com</a> and provide your approval. Please note the enquiry will remain active for 48 Hours from the time it is generated.
+            </p>
+            <br>
+            <p>
+              In case you cannot see this email properly, please login and visit the enquiry section in your account section.
+            </p>
+            <br>
+            <p>
+              Regards,<br>
+              ByeBuyingTeam
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-<%= "Other details: #{@product.technical_specification}"  if @product.technical_specification.present?%>
-<br><br>
+<!--Hi <%#= @user.name %>,-->
+<!--<br>-->
+<!--<br>-->
+<!--You have received one enquiry from <%#= @enquiry.user.name %> on your product having Ad Enquiry#<%#= @product.id %>  <%#= "and #{@product.description}" if @product.description.present? %>. Enquiry details are as:-->
+<!--<br><br>-->
+<!--Ad ID: Product-->
+<%#=@product.id %>
+<!--<br>-->
+<!--Ad Description: -->
+<%#= @product.description %>
+<!--<br>-->
+<!--Enquired by: -->
+<%#= @enquiry.user.name %>
+<!--<br>-->
+<!--Enquired on: -->
+<%#= @enquiry.created_at.strftime(time_format)%>
+<!--<br>-->
+<!--Product required for duration: -->
+<%#= @enquiry.start_at.strftime(time_format)%> to <%#= @enquiry.end_at.strftime(time_format)%>
+<!--<br>-->
+<!--Price requested per hour: -->
+<%#= @enquiry.expected_per_hour_price %>
+<!--<br>-->
+<!--Price requested per day : -->
+<%#= @enquiry.expected_per_day_price %>
+<!--<br>-->
+<!--Price requested per week : -->
+<%#= @enquiry.expected_per_week_price %>
+<!--<br>-->
+<!--Price requested per month : -->
+<%#= @enquiry.expected_per_month_price %>
+<!--<br>-->
 
-Please login into your account on <a href="http://byebuying.com">www.ByeBuying.com</a> and provide your approval. Please note the enquiry will remain active for 48 Hours from the time it is generated.
-<br><br>
-In case you cannot see this email properly, please login and visit the enquiry section in your account section.
-<br>
-<br>
-Regards,
-<br>
-ByeBuying Team
+<!--<%#= "Other details: #{@product.technical_specification}"  if @product.technical_specification.present?%>-->
+<!--<br><br>-->
+
+<!--Please login into your account on <a href="http://byebuying.com">www.ByeBuying.com</a> and provide your approval. Please note the enquiry will remain active for 48 Hours from the time it is generated.-->
+<!--<br><br>-->
+<!--In case you cannot see this email properly, please login and visit the enquiry section in your account section.-->
+<!--<br>-->
+<!--<br>-->
+<!--Regards,-->
+<!--<br>-->
+<!--ByeBuying Team-->
